<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/welcome"
        android:textSize="@dimen/WelcomeToDiaryMessage" />

    <Button
        android:id="@+id/addentry"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/add_entry" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addentry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/EventList"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/Events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome"
        android:layout_alignRight="@+id/welcome"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp" >

    </ListView>

</RelativeLayout>